@@ -13,6 +13,7 @@ our $VERSION = '0.002002';
 
 use Moose qw( has with around );
 use MooseX::Types::Moose qw( HashRef ArrayRef Str );
+use Dist::Zilla::Util::ConfigDumper qw( config_dumper );
 with 'Dist::Zilla::Role::PrereqSource';
 
 =begin MetaPOD::JSON v1.1.0
@@ -179,17 +180,7 @@ The following attributes exist, and may be specified more than once:
 
 sub mvp_multivalue_args { return qw( applyto applyto_relation applyto_phase ) }
 
-around dump_config => sub {
-  my ( $orig, $self ) = @_;
-  my $config      = $self->$orig;
-  my $this_config = {
-    applyto_phase    => $self->applyto_phase,
-    applyto_relation => $self->applyto_relation,
-    applyto          => $self->applyto,
-  };
-  $config->{ q{} . __PACKAGE__ } = $this_config;
-  return $config;
-};
+around dump_config => config_dumper( __PACKAGE__, qw( applyto_phase applyto_relation applyto ) );
 
 sub _foreach_phase_rel {
   my ( $self, $prereqs, $callback ) = @_;
