@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.002002
+ [Added / runtime requires]
+ - Dist::Zilla::Util::ConfigDumper
 
 0.002001 2014-08-16T20:14:31Z
  [Added / test requires]
