@@ -2,7 +2,17 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
 
 0.002002
  [Added / develop requires]
+ - Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes 0.001001
  - Dist::Zilla::Plugin::CopyFilesFromBuild
+
+ [Added / runtime requires]
+ - Dist::Zilla::Util::ConfigDumper
+
+ [Changed / develop suggests]
+ - Dist::Zilla::PluginBundle::Author::KENTNL 2.017002 → 2.020001
+
+ [Changed / test recommends]
+ - Test::More 1.001003 → 1.001006
 
 0.002001 2014-08-16T20:14:31Z
  [Added / develop requires]
