@@ -2,7 +2,11 @@ This file contains changes to DEVELOPMENT dependencies only ( both REQUIRED and 
 
 0.002002
  [Added / develop requires]
+ - Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes 0.001001
  - Dist::Zilla::Plugin::CopyFilesFromBuild
+
+ [Changed / develop suggests]
+ - Dist::Zilla::PluginBundle::Author::KENTNL 2.017002 → 2.020001
 
 0.002001 2014-08-16T20:14:31Z
  [Added / develop requires]
