@@ -1,9 +1,14 @@
 Release history for Dist-Zilla-Plugin-Prereqs-SyncVersions
 
 {{$NEXT}}
+ [00 Minor]
+ - use dump_config
+
  [Dependencies::Stats]
  - Dependencies changed since 0.002001, see misc/*.deps* for details
- - develop: +1
+ - develop: +2 (suggests: ↑1)
+ - runtime: +1
+ - test: (recommends: ↑1)
 
 0.002001 2014-08-16T20:14:31Z
  [00 Trivial]
